# atmospheric_physics

./: .gitignore  .gitmodules  CMakeLists.txt  CODEOWNERS  LICENSE.txt  README.md  geopotential.F90  geopotential_t.F90  kessler.F90  kessler_update.F90  state_converters.F90  suite_cam4.xml  suite_cam6.xml  suite_cam6_silhs.xml  suite_cam7.xml  suite_dry_adiabatic_adjust.xml  suite_held_suarez.xml  suite_held_suarez_1994.xml  suite_kessler.xml  suite_musica.xml  suite_tj2016.xml  suite_tj2016_precip.xml  suite_tj2016_sfc_pbl_hs.xml  suite_zh_geopotential  suite_zhang_mcfarlane.xml
.github/: pull_request_template.md
cam_diagnostics/: cam_diagnostics.F90  cam_state_diagnostics.F90  cam_tend_diagnostics.F90  kessler_diagnostics.F90  scheme_diagnostics_template.F90  tropopause_diagnostics.F90  zm_convr_tendency_diagnostics.F90  zm_diagnostics.F90  zm_evap_tendency_diagnostics.F90  zm_momtran_tendency_diagnostics.F90  zm_tendency_diagnostics.F90
check_energy/: check_energy_chng.F90  check_energy_chng_namelist.xml  check_energy_fix.F90  check_energy_gmean.F90  check_energy_scaling.F90  check_energy_zero_fluxes.F90
cloud_fraction/: cloud_fraction_fice.F90
dadadj/: dadadj.F90  dadadj_namelist.xml
doc/: ChangeLog  ChangeLog_template  NamesNotInDictionary.txt
docker/: Dockerfile.musica
dry_adiabatic_adjust/: dadadj.F90  dadadj_apply_qv_tendency.F90  dadadj_namelist.xml
held_suarez/: held_suarez.F90  held_suarez_1994.F90  held_suarez_1994_mars.F90  held_suarez_update.F90
kessler/: kessler.F90  kessler_update.F90
musica/: musica.F90  musica_ccpp.F90  musica_ccpp_namelist.xml  musica_ccpp_util.F90  musica_namelist.xml  util.F90
phys_utils/: atmos_pbl_utils.F90  atmos_phys_pbl_utils.F90  atmos_phys_rad_utils.F90  atmos_phys_string_utils.F90  ccpp_io_reader.F90  pbl_utils.F90
rayleigh_friction/: rayleigh_friction.F90  rayleigh_friction_namelist.xml
schemes/: .ccpp_physics_sparse_checkout  .pumas_sparse_checkout
schemes/mmm/: CMakeLists.txt  bl_gwdo_compat.F90  bl_gwdo_diag.F90  bl_mynn_compat.F90  bl_mynn_diag.F90  ccpp_kind_types.F90  cu_ntiedtke_compat.F90  cu_ntiedtke_diag.F90  mmm_physics_compat.F90  sf_mynn_compat.F90  sf_mynn_diag.F90
sima_diagnostics/: sima_state_diagnostics.F90
suites/: suite_adiabatic.xml  suite_cam4.xml  suite_cam5.xml  suite_cam6_silhs.xml  suite_cam7.xml  suite_held_suarez_1994.xml  suite_kessler.xml  suite_musica.xml  suite_rayleigh_friction.xml  suite_tj2016.xml  suite_zhang_mcfarlane.xml
test/: .dockerignore  CMakeLists.txt  valgrind.supp
test/cmake/: TestUtils.cmake
test/docker/: Dockerfile.musica  Dockerfile.musica.no_install  Dockerfile.musica.no_intstall
test/include/: ccpp_kinds.F90
test/musica/: CMakeLists.txt  README.md  musica_ccpp_namelist.F90  musica_ccpp_namelist.mod  musica_namelist.F90  musica_test_data.F90  test_musica_api.F90  test_musica_ccpp_util.F90  test_musica_data.F90  test_musica_dependencies.F90  test_musica_grid.F90  test_musica_species.F90
test/musica/aerosol/: CMakeLists.txt  mock_host.F90
test/musica/aerosol_stub/: CMakeLists.txt  test_stub_aerosol_model.F90
test/musica/configuration/analytical/: reactions.json  species.json
test/musica/configuration/micm_util/: reactions.json  species.json
test/musica/data/NO_photolysis/: mapping.nojNO.json  mapping.valid.json
test/musica/micm/: CMakeLists.txt  test_micm_api.F90  test_micm_mock_mods.F90  test_micm_util.F90
test/musica/micm/configs/chapman/: species.json
test/musica/tuvx/: CMakeLists.txt  test_tuvx_aerosol_optics.F90  test_tuvx_cloud_optics.F90  test_tuvx_extraterrestrial_flux.F90  test_tuvx_gas_species.F90  test_tuvx_gas_species_profile.F90  test_tuvx_height_grid.F90  test_tuvx_load_species.F90  test_tuvx_no_photolysis.F90  test_tuvx_surface_albedo.F90  test_tuvx_temperature.F90  test_tuvx_wavelength_grid.F90
test/musica/tuvx/configs/: ts1_tsmlt.json
test/musica/util/: CMakeLists.txt  test_musica_grid.F90
test/test_schemes/: clubb_stub.F90  file_io_test.F90  file_io_test_namelist.xml  initialize_constituents.F90  initialize_pbuf_aerosols.F90
test/test_sdfs/: suite_dry_adiabatic_adjust.xml  suite_tj2016_precip.xml  suite_tj2016_sfc_pbl_hs.xml  suite_tropopause_find.xml
test/test_suites/: suite_beljaars_form_drag.xml  suite_check_energy.xml  suite_check_energy_chng.xml  suite_convect_shallow_hack.xml  suite_convect_shallow_uw.xml  suite_convection_permitting.xml  suite_dme_adjust.xml  suite_dry_adiabatic_adjust.xml  suite_file_io_test.xml  suite_gw_cam4.xml  suite_gw_cam7.xml  suite_gw_cam7_se.xml  suite_kessler_test.xml  suite_microp_aero_bam.xml  suite_physics_dme_adjust.xml  suite_pumas.xml  suite_rasch_kristjansson.xml  suite_rrtmgp.xml  suite_rrtmgp_gpu.xml  suite_tj2016_precip.xml  suite_tj2016_sfc_pbl_hs.xml  suite_tracer_data_test.xml  suite_tropopause_find.xml  suite_vdiff_bretherton_park.xml  suite_vdiff_holtslag_boville.xml  suite_vdiff_holtslag_boville_free_atm.xml  suite_zhang_mcfarlane.xml
test/unit-test/: CMakeLists.txt  README.md
test/unit-test/include/: ccpp_kinds.F90  interpolate_stub.F90
test/unit-test/tests/: CMakeLists.txt
test/unit-test/tests/mmm/: CMakeLists.txt  mmm_physics_compat_tests.pf
test/unit-test/tests/phys_utils/: CMakeLists.txt  test_atmos_pbl_utils.pf  test_atmos_rad_utils.pf  test_atmos_string_utils.pf
test/unit-test/tests/rrtmgp/: CMakeLists.txt  test_calculate_net_heating.pf  test_radiation_tools.pf  test_radiation_utils.pf  test_rrtmgp_dry_static_energy_tendency.pf  test_rrtmgp_sw_solar_var_setup.pf
test/unit-test/tests/utilities/: test_state_converters.pf
test/unit-test/tests/utilities-tests/: CMakeLists.txt
tj2016/: tj2016_precip.F90  tj2016_sfc_pbl_hs.F90
to_be_ccppized/: ccpp_chem_utils.F90  ccpp_const_utils.F90  ccpp_tuvx_utils.F90  cloud_optical_properties.F90  coords_1d.F90  error_messages.F90  musica_dependencies.F90  read_tuvx_data.F90  shr_orb_mod.F90  vertical_diffusion_solver.F90  wv_saturation.F90
tropopause_find/: tropopause_diagnostics.F90  tropopause_find.F90  tropopause_find_namelist.xml
utilities/: geopotential_t.F90  geopotential_temp.F90  (+7 more)
(+336 files in other folders)
